# CG-engine

./: CMakeLists.txt  Objects.drawio  README.md
glad/include/glad/: gl.h
glad/src/: gl.c
include/: Camera.h  GUI.h  Game.h  Graphics.h  InputManager.h  Material.h  MaterialManager.h  MathConstats.h  Matrix.h  Mesh.h  MeshManager.h  Object.h  Quaternion.h  Renderer.h  ResourceManager.h  SceneManager.h  Shader.h  ShaderManager.h  SharedContext.h  Texture.h  TextureManager.h  Vector.h  Widget.h  Window.h
resources/materials/: Beethoven.txt  Beethoven_20k.obj.mtl  Container.mtl  Container.txt  Cube.mtl  Debugger.txt  Debugger_5k.obj.mtl  Diamond.mtl  Diamond.txt  LightSource.mtl  LightSource.txt  Sphere.mtl  TestGrid.txt  sponza.mtl
resources/shaderPrograms/: GUI.txt  Main.txt  PT.txt  Picking.txt  ReSTIR.txt  Screen.txt  Shadow.txt  Text.txt
resources/textures/: sponza_thorn_spec.tga  vase_spec.tga
scenes/: Scene_02-05-2026_18-20-00.251522600.txt  Scene_02-05-2026_19-23-29.968695600.txt  Scene_24-04-2026_22-37-53.448056200.txt  Scene_26-04-2026_19-07-13.112565600.txt  Scene_30-03-2026_19-00-54.327957800.txt
shaders/: GUI.frag  GUI.vert  Main.frag  Main.vert  PT.comp  Picking.frag  Picking.vert  ReSTIR.comp  Screen.frag  Screen.vert  Shadow.frag  Shadow.geom  Shadow.vert
src/: Camera.cpp  GUI.cpp  Game.cpp  Graphics.cpp  InputManager.cpp  Main.cpp  Object.cpp  Quaternion.cpp  Renderer.cpp  SceneManager.cpp  Shader.cpp  Widget.cpp  Window.cpp
